--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,4 +12,8 @@
         android:id="@+id/idCalenderFragment"
         android:icon="@drawable/ic_calender"
         android:title="Calender" />
+    <item
+        android:id="@+id/idImportFragment"
+        android:icon="@drawable/ic_upload"
+        android:title="Import" />
 </menu>
