--- a/app/src/main/res/layout/history_item_layout.xml
+++ b/app/src/main/res/layout/history_item_layout.xml
@@ -113,9 +113,10 @@
             android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/open_sans_semibold"
             android:maxLines="3"
-            android:text="mettin about whether\nhhhhhhh\nhgfffggggghhggg"
+            android:text=".mettin about whether\n.hhhhhhh\n.hgfffggggghhggg"
             android:textColor="@color/textColor"
             android:textSize="@dimen/_12sdp"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/date"
             app:layout_constraintTop_toBottomOf="@+id/date" />
