--- a/app/src/main/res/drawable/rounded_button_background_primary.xml
+++ b/app/src/main/res/drawable/rounded_button_background_primary.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/holo_blue_dark"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="@color/light_blue"/>
+    <corners android:radius="@dimen/_20sdp"/>
 </shape>
