--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,99 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".fragment.authorization.SignUpFragment">
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/create_account"
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/kent_ledge_extra_bold"
-        android:text="@string/create_account"
-        android:textColor="@color/light_black"
-        android:textSize="@dimen/_19ssp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/login_top_icon" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        app:layout_constraintBottom_toBottomOf="@+id/create_account"
-        app:layout_constraintStart_toEndOf="@+id/create_account"
-        app:layout_constraintTop_toTopOf="@+id/create_account"
-        app:srcCompat="@drawable/create_account" />
+        android:id="@+id/appCompatImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/_150sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/app_logo" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/appCompatTextView4"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/materialButton"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginHorizontal="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_80sdp"
+        android:backgroundTint="@color/blue"
+        android:fontFamily="@font/open_sans_bold"
+        android:text="@string/continue_email"
+        android:textSize="@dimen/_12ssp"
+        app:cornerRadius="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView"
+        tools:layout_editor_absoluteX="13dp" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/appCompatImageView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        app:layout_constraintEnd_toEndOf="@+id/materialButton"
+        app:layout_constraintStart_toStartOf="@+id/materialButton"
+        app:layout_constraintTop_toBottomOf="@+id/materialButton"
+        app:srcCompat="@drawable/or_icon" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/signUpMicroSoft"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        app:layout_constraintStart_toEndOf="@+id/signUpGoogle"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
+        app:srcCompat="@drawable/sign_m" />
+
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/signUpGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginEnd="@dimen/_90sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/appCompatImageView2"
+        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
+        app:srcCompat="@drawable/sign_g" />
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:fontFamily="@font/kent_ledge_medium"
-        android:text="@string/welcome_please"
-        android:textColor="@color/light_black"
-        android:textSize="@dimen/_14ssp"
-        app:layout_constraintStart_toStartOf="@+id/create_account"
-
-        app:layout_constraintTop_toBottomOf="@+id/create_account" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_400sdp"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:fontFamily="@font/kent_ledge_extra_bold"
-            android:text="@string/name"
-            android:textColor="@color/light_black"
-            android:textSize="@dimen/_14ssp" />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginVertical="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/bg_main_gradient">
-
-            <ImageView
-                android:id="@+id/name_img"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/u_name_icon"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:ignore="ContentDescription" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/search_edit_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                android:background="@android:color/transparent"
-                android:hint="@string/user_name_hint"
-                android:inputType="text"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/kent_ledge_extra_bold"
-                android:textAppearance="?attr/textAppearanceHeadline6"
-                app:layout_constraintBottom_toBottomOf="@id/name_img"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/name_img"
-                app:layout_constraintTop_toTopOf="@+id/name_img" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/login_bottom_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
