--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="progress_Dark">#D3D3D3</color>
     <color name="light_black">#231F1F</color>
     <color name="hint_color">#AEAEAE</color>
+    <color name="blue">#0F72D7</color>
 
 </resources>
