records api calling

--- a/app/src/main/res/layout/fragment_verify_email.xml
+++ b/app/src/main/res/layout/fragment_verify_email.xml
@@ -78,18 +78,39 @@
         app:layout_constraintStart_toEndOf="@+id/already_txt"
         app:layout_constraintTop_toTopOf="@+id/already_txt" />
 
+
+    <com.chaos.view.PinView
+        android:id="@+id/pinview"
+        style="@style/PinWidget.PinView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:cursorVisible="true"
+        android:gravity="center"
+        android:inputType="number"
+        android:itemBackground="#F5F5F5"
+        app:hideLineWhenFilled="false"
+        app:itemCount="6"
+        app:itemHeight="50dp"
+        app:itemRadius="10dp"
+        app:itemWidth="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/next"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/already_txt" />
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/next"
         android:layout_width="0dp"
         android:layout_height="@dimen/_50sdp"
-        android:layout_marginTop="@dimen/_20sdp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/open_sans_bold"
         android:text="@string/open_email"
         android:textSize="@dimen/_12ssp"
         app:cornerRadius="@dimen/_10sdp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/send_again"
-        app:layout_constraintStart_toStartOf="@+id/already_txt"
-        app:layout_constraintTop_toBottomOf="@+id/already_txt" />
+        app:layout_constraintStart_toStartOf="@+id/already_txt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
